Fix black text during setup in dark mode

--- a/Beocreate2/beo-system/common/beostyle2018.css
+++ b/Beocreate2/beo-system/common/beostyle2018.css
@@ -4050,6 +4050,10 @@ p.setup-prompt {
 	display: none;
 }
 
+.dark p.setup-prompt {
+	color: white;
+}
+
 .setup p.setup-prompt {
 	display: block;
 }
